<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="@dimen/text_l"
            app:layout_constraintEnd_toStartOf="@id/findUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Testing@test.com" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/top5Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:text="@string/top_5"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_m"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_m"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="@id/top5Header"
            app:layout_constraintStart_toEndOf="@id/top5Header"
            app:layout_constraintTop_toTopOf="@id/top5Header" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/findUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/find_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/add_top_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/findUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>