<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_l"
        tools:context=".features.user.ui.profile.ProfileFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emoji_hint"
            android:textColor="@color/white"
            android:textSize="@dimen/text_l"
            app:layout_constraintBottom_toBottomOf="@id/listTitle"
            app:layout_constraintStart_toEndOf="@id/listTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/listTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/listTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_s"
            android:layout_marginEnd="@dimen/space_s"
            android:hint="@string/title"
            android:paddingHorizontal="@dimen/space_s"
            android:textColor="@color/black"
            android:textSize="@dimen/text_m"
            app:layout_constraintEnd_toStartOf="@id/createList"
            app:layout_constraintStart_toEndOf="@id/emoji"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movieList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_s"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listTitle"
            tools:itemCount="5"
            tools:listitem="@layout/item_movie_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>